refac: Refatorando servico de setores pois estavam com falha logica no update